some findbugs cleanup
git-svn-id: https://svn.apache.org/repos/asf/incubator/wicket/trunk@462166 13f79535-47bb-0310-9956-ffa450edef68